--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,12 @@
+CHANGES IN VERSION 0.1.71 (2012-05-12)
+
+  o GetMunicipalityInfo modified 
+  o added ConvertMunicipalityNames function
+  o added GetParliamentaryElectionData function
+  o GetMunicipalityInfoMML 
+  o GetMunicipalityInfoStatFi
+  o elections*.R functions added for datavaalit
+
 CHANGES IN VERSION 0.1.58 (2012-03-06)
 
   o XML removed from dependencies
