Removed several dependencies

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 0.1.73 (2012-07-09)
+
+  o Removed several dependencies and made them marginal (see wiki for description)
+
 CHANGES IN VERSION 0.1.71 (2012-05-12)
 
   o GetMunicipalityInfo modified 
