--- a/inst/doc/vignette.Rnw
+++ b/inst/doc/vignette.Rnw
@@ -13,7 +13,6 @@
 \usepackage{hyperref}
 \usepackage{Sweave}
 \usepackage{float}
-
 %\setlength{\textwidth}{417pt}
 %\setlength{\oddsidemargin}{44pt}
 %\setlength{\marginparwidth}{55pt}
@@ -31,10 +30,10 @@
 \newcommand{\Robject}[1]{{\texttt{#1}}}
 \newcommand{\Rpackage}[1]{{\textit{#1}}}
 
-\title{soRvi\\avoimen datan työkalupakki}
-\author{Leo Lahti\footnote{Wageningen University, Nederland <leo.lahti@iki.fi>}\ , Juuso Parkkinen\footnote{Aalto-yliopisto <juuso.parkkinen@gmail.com>}\ \ ja Joona Lehtomäki\footnote{Helsingin yliopisto}}
+\title{soRvi\\avoimen datan ty{\"o}kalupakki}
+\author{Leo Lahti\footnote{Wageningen University, Nederland <leo.lahti@iki.fi>}\ , Juuso Parkkinen\footnote{Aalto-yliopisto <juuso.parkkinen@gmail.com>}\ \ ja Joona Lehtom{\"a}ki\footnote{Helsingin yliopisto}}
 
-\hyphenation{a-voi-men jul-kis-hal-lin-non tie-to-läh-tei-siin tar-jo-a-mal-la joh-da-tus e-si-merk-ke-jä pa-li-kan kas-vus-sa y-leis-käyt-töi-si-ä}
+\hyphenation{a-voi-men jul-kis-hal-lin-non tie-to tar-jo-a-mal-la joh-da-tus pa-li-kan kas-vus-sa}
 
 \begin{document}
 
@@ -53,30 +52,34 @@ käsiksi. Laaja saatavuus ja käyttö voi siten merkittävästi nostaa
 datan arvoa.
 
 Laskennallisten työkalujen saatavuus on osoittautunut keskeiseksi
-pullonkaulaksi. Tämä R-kielinen työkalupakki pyrkii paikkaamaan puutetta tarjoamalla
-yleiskäyttöisiä välineitä julkisten tietoaineistojen hakuun,
-putsaamiseen, yhdistelyyn, louhintaan ja visualisointiin. Pakettiin on
-koottu kattava kokoelma ratkaisuja avoimen datan käsittelyyn. Myös uudet
-ehdotukset ja lisäykset ovat tervetulleita.
+pullonkaulaksi avoimen datan hyödyntämiselle tutkimuksessa,
+järjestötoiminnassa, tietojournalismissa, opetustyössä, ja muilla
+tietointensiivisillä aloilla.  Datan ja työkalujen helppo saatavuus
+tuo uudenlaisia välineitä yhteiskunnalliseen osallistumiseen ja
+läpinäkyvyyden lisäämiseksi.
 
-\section{Asennus}
+Tämä R-kielinen työkalupakki paikkaa nämä puutteet tarjoamalla
+kattavan kokoelman välineitä avoimen yhteiskunnallisen datan hakuun,
+putsaamiseen, yhdistelyyn, analyysiin ja
+visualisointiin. Ohjelmakirjaston kehitys tapahtuu
+vapaaehtoistyönä. Uudet ehdotukset ja lisäykset yleisöltä ovat
+tervetulleita\footnote{http://louhos.github.com/sorvi}.
 
-Asennus- ja kehitysohjeet löytyvät projektin kotisivulta http://louhos.github.com/sorvi.
 
-\section{Esimerkit}
+\section{Asentaminen ja esimerkit}
 
-Yksityiskohtaisia esimerkkejä paketin käytöstä Suomi-datan
-penkomiseen löydät lähdekoodeineen Louhos-blogista http://louhos.wordpress.com. 
+Asennus- ja kehitysohjeet löytyvät projektin kotisivulta
+http://louhos.github.com/sorvi. Yksityiskohtaisia esimerkkejä paketin
+käytöstä Suomi-datan penkomiseen löydät lähdekoodeineen
+Louhos-blogista http://louhos.wordpress.com.
 
-\section{Yhteystiedot}
 
-Yhteystiedot löytyvät projektin kotisivulta http://louhos.github.com/sorvi.
+\section{Työhön viittaaminen}
 
-\section{Pakettiin viittaaminen}
-
-Paketin välineet ovat vapaasti käytettävissä, muokattavissa, ja edelleen levitettävissa.
-FreeBSD-lisenssillä\footnote{http://en.wikipedia.org/wiki/BSD\_licenses}. Mikäli
-paketista on apua, toivomme viittaamista työhön \cite{sorvi11}. Lisää tietoa löytyy projektin kotisivulta\footnote{http://louhos.github.com/sorvi}.
+Välineet ovat vapaasti käytettävissä, muokattavissa, ja edelleen levitettävissä.
+FreeBSD-lisenssillä\footnote{http://en.wikipedia.org/wiki/BSD\_licenses}. 
+Toivomme työhön viittaamista julkaisujen yhteydessä \cite{sorvi11}. 
+Lisää tietoa hankkeesta löydät projektin kotisivulta\footnote{http://louhos.github.com/sorvi}.
 
 
 \section{Versiotiedot}
