--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,8 @@
-CHANGES IN VERSION 0.1.81 (2012-14-08)
+CHANGES IN VERSION 0.1.82 (2012-08-31)
+  
+  o Added functions hetu and valid.hetu for processing Finnish personal identification numbers.
+
+CHANGES IN VERSION 0.1.81 (2012-08-14)
 
   o MML data Kunta.FI field updated: Lansi-Turunmaa -> Parainen;
     Pedersoren kunta -> Pedersore
