--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 0.1.83 (2012-09-03)
+  
+  o Fixed a bug with handling years in hetu-function.
+
 CHANGES IN VERSION 0.1.82 (2012-08-31)
   
   o Added functions hetu and valid.hetu for processing Finnish personal identification numbers.
