--- a/README
+++ b/README
@@ -8,7 +8,7 @@
   other data resources. 
 
   For further details (in Finnish), see the project homepage:
-  http://sorvi.r-forge.r-project.org
+  http://louhos.github.com/sorvi
 
 
 * Developers
@@ -23,15 +23,7 @@
 
 * Contact info
   
-  Homepage: http://sorvi.r-forge.r-project.org
-
-  Blog: http://louhos.wordpress.com
-
-  Public project email: sorvi-commits@lists.r-forge.r-project.org
-
-  Private admin email:  sorvi-admin@lists.r-forge.r-project.org  
-
-  IRC channel: !louhos @ IRCnet
+  See: http://louhos.github.com/contact.html
     
 
 * License
@@ -40,8 +32,7 @@
   modify it under the terms of the FreeBSD License
   (http://en.wikipedia.org/wiki/BSD_licenses):
 
-  Copyright 2011 Leo Lahti, Juuso Parkkinen and Joona Lehtomäki.  All
-  rights reserved.
+  Copyright 2011-2012 Louhos team. All rights reserved.
 
   Redistribution and use in source and binary forms, with or without
   modification, are permitted provided that the following conditions
