--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,8 @@
+CHANGES IN VERSION 0.2.00 (2012-10-24)
+
+ o Minor fixed in maps.R and HKK.R
+
+
 CHANGES IN VERSION 0.1.83 (2012-09-03)
   
   o Fixed a bug with handling years in hetu-function.
